<resources>
    <string name="select_your_language">Select your Language</string>
    <string name="proxy_settings_label">Proxy</string>
    <string name="proxy_settings_summary">Configure the proxy server address and port number</string>
    <string name="airplane_mode">Airplane Mode</string>
    <string name="airplane_mode_summary">Disable all wireless connections</string>
    <string name="bluetooth_quick_toggle_title">Bluetooth</string>
    <string name="bluetooth_quick_toggle_summary">Turn on Bluetooth</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="bluetooth_settings_summary">Manage connections, set device name &amp; discoverability</string>
    <string name="wifi_quick_toggle_title">WLAN</string>
    <string name="wifi_quick_toggle_summary">Turn on WLAN</string>
    <string name="wifi_settings">WLAN</string>
    <string name="wifi_settings_summary">Set up &amp; manage wireless access points</string>
    <string name="tether_settings_title_both">Tethering &amp; Portable Hotspot</string>
    <string name="tether_settings_summary_both">"Share your phone's mobile data connection via USB or as a portable WLAN hotspot"</string>
    <string name="network_settings_title">Mobile Network</string>
    <string name="network_settings_summary">Set options for roaming, networks, APNs</string>
    <string name="install_applications">Unknown sources</string>
    <string name="install_unknown_applications">Allow installation of non-Market applications</string>
    <string name="runningservices_settings_title">Running services</string>
    <string name="runningservices_settings_summary">View and control currently running services</string>
    <string name="enable_adb">USB debugging</string>
    <string name="enable_adb_summary">Debug mode when USB is connected</string>
    <string name="keep_screen_on">Stay awake</string>
    <string name="keep_screen_on_summary">Screen will never sleep while charging</string>
    <string name="allow_mock_location">Allow mock locations</string>
    <string name="allow_mock_location_summary">Allow mock locations</string>
    <string name="vpn_openvpn_port">Server port</string>
    <string name="vpn_openvpn_protocol">Protocol to use</string>
    <string name="vpn_openvpn_device">Device to use</string>
    <string name="vpn_openvpn_advanced_titlebar">Advanced Open vpn</string>
    <string name="vpn_openvpn_comp_lzo">LZO compression</string>
    <string name="vpn_openvpn_comp_lzo_summary">Force LZO compression to be set to on</string>
    <string name="vpn_openvpn_redirect_gateway_title">Redirect gateway</string>
    <string name="vpn_openvpn_redirect_gateway_summary">Force all traffic to be routed thru the VPN tunnel</string>
    <string name="vpn_openvpn_set_addr">Remote Sets Addresses</string>
    <string name="vpn_openvpn_set_addr_summary">Uncheck to set tunnel addresses manually</string>
    <string name="vpn_openvpn_set_local_addr">Local IP Address</string>
    <string name="vpn_openvpn_set_remote_addr">Remote IP Address</string>
    <string name="vpn_openvpn_set_cipher">Cipher algorithm</string>
    <string name="vpn_openvpn_set_cipher_message">Leave empty to use default cipher</string>
    <string name="vpn_openvpn_set_keysize">Size of cipher key</string>
    <string name="vpn_openvpn_set_keysize_message">Leave empty to use cipher-specific default</string>
    <string name="vpn_openvpn_set_extra">Extra arguments</string>
    <string name="vpn_openvpn_set_extra_message">Enter the extra command line arguments</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="vpn_settings_summary">Set up &amp; manage Virtual Private Networks (VPNs)</string>
    <string name="key_settings">Button</string>
    <string name="back_long_press">Back key</string>
    <string name="enable_back_long_press">Long-press to kill app</string>
    <string name="power_key">Power button</string>
    <string name="disable_power_key_long_press_under_keyguard">Disable on lockscreen</string>
    <string name="media_button">Media button</string>
    <string name="preferred_media_app_summary">Choose Music player</string>
    <string name="camera_key_action_title">MI button</string>
    <string name="camera_key_action_setting_title">MI Button</string>
    <string name="camera_key_action_category_title">Use if camera application is not open</string>
    <string name="multi_touch_points_category_title">Multi-touch points</string>
    <string name="multi_touch_points_preference">Reboot to enable</string>
    <string name="trackball_wake_title">Trackball wake</string>
    <string name="install_development_settings_title">Development</string>
    <string name="development_debug_category">Development &amp; debugging</string>
    <string name="trackball_settings">Trackball</string>
    <string name="button_done">Done</string>
    <string name="button_cancel">Cancel</string>
    <string name="battery_low_level">Alarm level for low battery</string>
    <string name="battery_saving_rules_title">Power saving mode</string>
    <string name="battery_auto_saving_category_general">Changes will come into effect on the next time power saving mode is activated</string>
    <string name="battery_auto_saving">Auto power saving mode</string>
    <string name="battery_auto_saving_summary">Automatically activates power saving mode when the battery is running low.</string>
    <string name="battery_setting_quick_entry">Low power notification</string>
    <string name="battery_setting_quick_entry_summary">Notification will be shown when the battery is running low. Click on the notification to enter power settings.</string>
    <string name="battery_auto_saving_category_rule">Power saving options</string>
    <string name="battery_auto_saving_rule_brightness">Reduce brightness</string>
    <string name="battery_auto_saving_rule_brightness_summary">Screen brightness will be set to minimum. Can drastically decrease power draw.</string>
    <string name="battery_auto_saving_rule_background_data">Disable BG data transfer</string>
    <string name="battery_auto_saving_rule_background_data_summary">Reduces power draw and data charges.</string>
    <string name="battery_auto_saving_rule_auto_sync">Disable sync</string>
    <string name="battery_auto_saving_rule_auto_sync_summary">Disable syncing of contacts, mail, etc.</string>
    <string name="battery_auto_saving_rule_apn">Disable mobile data</string>
    <string name="battery_auto_saving_rule_apn_summary">Disable mobile networks such as GPRS and 3G.</string>
    <string name="battery_auto_saving_rule_wifi">Disable WLAN</string>
    <string name="battery_auto_saving_rule_wifi_summary">Can drastically reduce power draw.</string>
    <string name="battery_auto_saving_rule_bluetooth">Disable bluetooth</string>
    <string name="battery_auto_saving_rule_bluetooth_summary">Can drastically reduce power draw.</string>
    <string name="battery_auto_saving_rule_gps">Disable GPS</string>
    <string name="battery_auto_saving_rule_gps_summary">Disable background usage of GPS.</string>
    <string name="battery_auto_saving_rule_vibrate">Disable vibrations</string>
    <string name="battery_auto_saving_rule_vibrate_summary">Vibrations do not consume much power under normal usage.</string>
    <string name="battery_auto_saving_rule_haptic">Disable haptic feedback</string>
    <string name="battery_auto_saving_rule_haptic_summary">Refer to vibrations.</string>
    <string name="battery_auto_saving_rule_wallpaper">Disable live wallpapers</string>
    <string name="battery_auto_saving_rule_wallpaper_summary">Live Wallpapers are significant source of power draw and may cause system lag.</string>
    <string name="battery_auto_saving_rule_screen_time_out">Reduce screen timeout</string>
    <string name="battery_auto_saving_rule_screen_time_out_summary">Reduces screen timeout interval to minimum. May help with battery life.</string>
    <string name="battery_auto_saving_category_practise">Want to extend your battery life?</string>
    <string name="battery_auto_saving_practise">Tips on Maximizing Battery Life</string>
    <string name="battery_auto_saving_practise_summary">"1.Limit number of background applications. 
2.Unless under bright light, there is no need for maximum brightness. 
3.Consider activating Airplane Mode at night."</string>
    <string name="battery_auto_saving_practise_more">More power saving tips...</string>
    <string name="haptic_title">Haptic feedback tweaks</string>
    <string name="haptic_summary">Adjust when and how strong haptic feedback occurs</string>
    <string name="title_haptic_feedback_up">Use haptic feedback</string>
    <string name="summary_on_haptic_feedback_up">Use haptic feedback on key release for soft keys and certain UI interactions</string>
    <string name="summary_off_haptic_feedback_up">Do not use haptic feedback on key release for soft keys and certain UI interactions</string>
    <string name="title_haptic_feedback_all">Haptic screen selections</string>
    <string name="summary_on_haptic_feedback_all">Use haptic feedback when making screen selections</string>
    <string name="summary_off_haptic_feedback_all">Do not use haptic feedback when making screen selections</string>
    <string name="title_haptic_down_decider">Set Down Pattern</string>
    <string name="title_haptic_up_decider">Set Up Pattern</string>
    <string name="title_haptic_long_decider">Set Long-Press Pattern</string>
    <string name="title_haptic_tap_decider">Set Keypad Tap Pattern</string>
    <string name="sound_settings">Sound</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="silent_mode_summary">Silence all sounds except media &amp; alarms</string>
    <string name="vibrate_in_silent_title">Vibrate in silent mode</string>
    <string name="vibrate_category">Vibration</string>
    <string name="vibrate_in_normal_title">Normal vibration</string>
    <string name="vibrate_items_title">Vibration</string>
    <string name="volume_category">Volume</string>
    <string name="all_volume">All volumes</string>
    <string name="ringtone_volume_title">Call volume</string>
    <string name="ringtone_category">Ringtones</string>
    <string name="incoming_call_ringtone_settings_title">Ringtone</string>
    <string name="notification_ringtone_settings_title">Notification ringtone</string>
    <string name="sms_received_sound_settings_title">SMS notification sound</string>
    <string name="sms_delivered_sound_settings_title">SMS delivery sound</string>
    <string name="dtmf_tone_enable_title">Audible touch tones</string>
    <string name="dtmf_tone_enable_summary_on">Play tones when using dial pad</string>
    <string name="dtmf_tone_enable_summary_off">Play tones when using dial pad</string>
    <string name="sound_effects_enable_title">Audible selection</string>
    <string name="sound_effects_enable_summary_on">Play sound when making screen selection</string>
    <string name="sound_effects_enable_summary_off">Play sound when making screen selection</string>
    <string name="lock_sounds_enable_title">Screen lock sounds</string>
    <string name="lock_sounds_enable_summary_on">Play sounds when locking and unlocking the screen</string>
    <string name="lock_sounds_enable_summary_off">Play sounds when locking and unlocking the screen</string>
    <string name="haptic_feedback_enable_title">Haptic feedback</string>
    <string name="haptic_feedback_enable_summary_on">Vibrate when pressing soft keys and on certain UI interactions</string>
    <string name="haptic_feedback_enable_summary_off">Vibrate when pressing soft keys and on certain UI interactions</string>
    <string name="pref_volume_category_title">Volume</string>
    <string name="pref_volume_wake_title">Volume rocker wake</string>
    <string name="pref_volume_wake_summary">Pressing the volume up/down wakes the device. Intended for devices with hard to press power key</string>
</resources>