<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/haptic_title" android:summary="@string/haptic_summary"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/title_haptic_feedback_up" android:key="haptic_feedback_up" android:defaultValue="false" android:summaryOn="@string/summary_on_haptic_feedback_up" android:summaryOff="@string/summary_off_haptic_feedback_up" />
    <CheckBoxPreference android:title="@string/title_haptic_feedback_all" android:key="haptic_feedback_all" android:defaultValue="false" android:summaryOn="@string/summary_on_haptic_feedback_all" android:summaryOff="@string/summary_off_haptic_feedback_all" />
    <Preference android:title="@string/title_haptic_down_decider" android:key="haptic_down_decider" android:defaultValue="0" />
    <Preference android:title="@string/title_haptic_up_decider" android:key="haptic_up_decider" android:defaultValue="1" />
    <Preference android:title="@string/title_haptic_long_decider" android:key="haptic_long_decider" android:defaultValue="2" />
    <Preference android:title="@string/title_haptic_tap_decider" android:key="haptic_tap_decider" android:defaultValue="3" />
</PreferenceScreen>
