<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/install_development_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/install_applications" android:key="toggle_install_applications" android:summaryOn="@string/install_unknown_applications" android:summaryOff="@string/install_unknown_applications" />
    <PreferenceCategory>
        <PreferenceScreen android:title="@string/runningservices_settings_title" android:summary="@string/runningservices_settings_summary">
            <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.RunningServices" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/development_debug_category">
        <CheckBoxPreference android:title="@string/enable_adb" android:key="enable_adb" android:summary="@string/enable_adb_summary" />
        <CheckBoxPreference android:title="@string/keep_screen_on" android:key="keep_screen_on" android:summary="@string/keep_screen_on_summary" />
        <CheckBoxPreference android:title="@string/allow_mock_location" android:key="allow_mock_location" android:summary="@string/allow_mock_location_summary" />
    </PreferenceCategory>
</PreferenceScreen>
